--- a/asset/style.scss
+++ b/asset/style.scss
@@ -156,7 +156,7 @@ aside.sidebar {
 .in-progress {
   position: relative;
   background: hsl(40, 100%, 95%);
-  padding: 6px 18px;
+  padding: 0 18px;
   font: normal 15px/24px $sans;
   color: hsl(35, 40%, 40%);
   border: solid 4px hsl(38, 80%, 88%);
@@ -269,6 +269,61 @@ a.outline:after {
 .codehilite .c1 { color: #999; }     // comment
 .codehilite .cm { color: #999; }     // comment
 .codehilite .cp { color: #594; }     // preprocessor
+
+// Based on MailChimp Form Embed Code - Slim - 08/17/2011
+#mc_embed_signup table {
+  border-spacing: 0px;
+}
+
+#mc_embed_signup input {
+  border: 2px solid hsl(38, 80%, 88%);
+  -webkit-appearance:none;
+}
+
+#mc_embed_signup input:focus {
+  border-color: hsl(38, 100%, 75%);
+}
+
+#mc_embed_signup label {
+  white-space: nowrap;
+}
+
+#mc_embed_signup .button {
+  background-color: hsl(40, 90%, 55%);
+  border: 0 none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 13px;
+  height: 24px;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: top;
+  width: 100%;
+  padding: 0 16px;
+}
+
+#mc_embed_signup .spacer {
+  width: 8px;
+}
+
+#mc_embed_signup .button:hover {
+  background-color: hsl(40, 100%, 45%);
+}
+
+#mc_embed_signup .small-meta {font-size: 11px;}
+
+#mc_embed_signup input.email {
+  padding: 5px 0;
+  text-indent: 5px;
+  width: 100%;
+}
+
+#mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%;margin: 0 5%; clear: both;}
+#mc_embed_signup div.response {margin:1em 0; padding:1em .5em .5em 0; font-weight:bold; float:left; top:-1.5em; z-index:1; width:80%;}
+#mc_embed_signup #mce-error-response {display:none;}
+#mc_embed_signup #mce-success-response {color:#529214; display:none;}
+#mc_embed_signup label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;}
 
 @media only screen and (max-width: 479px) {
   h2 {
