--- a/asset/style.scss
+++ b/asset/style.scss
@@ -83,6 +83,14 @@ img {
   max-width: 100%;
 }
 
+// Hackish way of scaling it down for retina.
+img.arrow {
+  vertical-align: middle;
+  margin-top: -2px;
+  width: 30px;
+  height: 20px;
+}
+
 blockquote {
   padding: 0 12px;
 }
