--- a/asset/style.scss
+++ b/asset/style.scss
@@ -162,6 +162,9 @@ aside.sidebar {
 
 // In-progress banner.
 .in-progress {
+  // It will be shown by JavaScript if the cookie isn't set.
+  display: none;
+
   position: relative;
   background: hsl(40, 100%, 95%);
   padding: 0 18px;
