--- a/asset/style.scss
+++ b/asset/style.scss
@@ -42,6 +42,7 @@ body {
 
   background: white;
   box-shadow: 0 0 20px hsla(30, 40%, 20%, 0.05);
+  z-index: 2;
 }
 
 .page.sidebar {
@@ -68,14 +69,17 @@ h1.book {
 h2 {
   color: $primary;
   font: 300 35px $header;
-  margin: 20px 0 0 0;
-  padding: 0 0 2px 0;
+  margin: 20px 0 0 -38px;
+  padding: 0 0 2px 30px;
+  border-left: solid 8px hsl(200, 50%, 90%);
 }
 
 h3 {
   color: $primary;
   font: 400 20px $header;
-  margin: 20px 0 0 0;
+  margin: 20px 0 0 -38px;
+  padding-left: 30px;
+  border-left: solid 8px hsl(200, 50%, 90%);
 }
 
 h4 {
@@ -188,6 +192,10 @@ aside.sidebar {
   padding: 0;
   background: none;
   border: none;
+
+  padding-left: 22px;
+  border-radius: 0;
+  border-left: solid 8px hsl(40, 35%, 93%);
 }
 
 // In-progress banner.
